from .financial_report_presenter import FinancialReportPresenter
from ..interactor.financial_report_requester import FinancialReportRequester
from ..interactor.financial_report_request import FinancialReportRequest
from ..interactor.financial_report_response import FinancialReportResponse


class FinancialReportController:
    def __init__(
        self,
        presenter: FinancialReportPresenter,
        requester: FinancialReportRequester,
        request: FinancialReportRequest,
        response: FinancialReportResponse,
    ):
        self.presenter = presenter
        self.requester = requester
        self.request = request
        self.response = response

    def handle_request(self):
        # Implement request handling logic
        pass
