class FinancialEntities:
    pass
