class FinancialReportRequest:
    pass
