class FinancialReportResponse:
    pass
