from ..presenter.printer.view import PrintView
from ..presenter.printer.view_model import PrintViewModel


class PDFView(PrintView):
    def display(self, view_model: PrintViewModel):
        # Implement web view display logic
        pass
