from ..presenter.screen.view import ScreenView
from ..presenter.screen.view_model import ScreenViewModel


class WebView(ScreenView):
    def display(self, view_model: ScreenViewModel):
        # Implement web view display logic
        pass
